--- a/abn-tv-show-app/package.json
+++ b/abn-tv-show-app/package.json
@@ -14,17 +14,21 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.4",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
-    "vite": "^5.0.11"
+    "sass": "^1.69.5",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6"
   }
 }
