--- a/abn-tv-show-app/package.json
+++ b/abn-tv-show-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite",
     "build": "vite build",
     "test:unit": "vitest",
     "preview": "vite preview",
